--- a/style.css
+++ b/style.css
@@ -105,3 +105,8 @@ button{
     cursor: pointer;
     box-shadow: 0px 10px 40px -12px #00000052;
 }
+
+.btn-login:hover{
+    transition: background 1s;
+    background: #56d65d;
+}
